--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,12 @@ services:
      - 8000:8000
     volumes:
      - .:/core
+    depends_on:
+      - db
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   smtp4dev:
     image: rnwood/smtp4dev:v3
     ports:
@@ -20,6 +26,18 @@ services:
     environment:
       - ServerOptions__Urls=http://*:80
       - ServerOptions__HostName=smtp4dev
+  db:
+    image: postgres:14-alpine
+    container_name: posg
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - ~/apps/postgres:/var/lib/postgresql/data
 
 volumes:
   smtp4dev-data:
+  postgres_data:
